objects/Rfp_Processing__c.object
<CustomObject>
    <description>R5 - RFP Processing</description>
    <fields>
        <fullName>Assigned_Bid_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Created as part of req 2461</description>
        <label>RFQ Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Processings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Rfp_Processing__r.Rfp_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_A1__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>A1</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Approval_Status__c</fullName>
        <description>R5 - created as part of req 2461</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>FCM Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posting Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Approved_To_Issue_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Created as part of req 2461</description>
        <label>Approved To Issue Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Processings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rfp_Approved_to_Issue_Date__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Approved to Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Approved_to_Issue__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Approved to Issue</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Comment__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Comments__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Complete_1__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>Complete 1</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Complete_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Complete 2</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Complete_3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Complete 3</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Date_Response_Received_1__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Date Response Received 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Date_Response_Received_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Date Response Received 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Date_Response_Received_3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Date Response Received 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Date_Sent_To_Supplier_1__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Date Sent To Supplier 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Date_Sent_To_Supplier_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Date Sent To Supplier 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Date_Sent_To_Supplier_3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Date Sent To Supplier 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Email_Was_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Created as part of Req 2461</description>
        <label>Email Was Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Processings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rfp_Email_Was_Sent__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Email Was Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rfp_Export_Control_review__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Has this been reviewed by export control</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Format_Structure_Review__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Format / Structure Review</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Price_Review__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Price Review</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Priority_1__c</fullName>
        <description>Priority - Created as part of R5 Req 2461</description>
        <label>Priority 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Priority_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Priority 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Priority_3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Priority 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Processing_Order__c</fullName>
        <description>R5 - created as part of Req 2461</description>
        <label>Processing Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Processing__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>RFQ</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>Processings</relationshipLabel>
        <relationshipName>Processings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rfp_Proposal_Number__c</fullName>
        <description>Proposal Number - Created as part of R5 Req 2461</description>
        <label>Quotation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Proposal_Status_Comments__c</fullName>
        <description>Proposal Status / Comments - Created as part of R5 Req 2461</description>
        <label>Quotation Status/Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Q1__c</fullName>
        <defaultValue>&quot;Has this been reviewed by export control?&quot;</defaultValue>
        <description>R5 - Created as part of req 2461</description>
        <label>Q1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Status__c</fullName>
        <description>Status - Created as part of  R5 Req 2461</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting On Full Cost Model Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Quality Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Supplier_Contact_1__c</fullName>
        <description>Supplier Contact - Created as part of R5  Req 2461</description>
        <label>Supplier Contact 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Supplier_Contact_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Supplier Contact 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Supplier_Contact_3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Supplier Contact 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Supplier_Name_1__c</fullName>
        <description>Supplier Name/Location - Created as part of R5 Req 2461</description>
        <label>Supplier Name/Location 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Supplier_Name_Location_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Supplier Name/Location 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Supplier_Name_Location_3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Supplier Name/Location 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Supplier_Name_Location_4__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Supplier Name/Location 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Technical_Review__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Technical Review</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Text_For_Email__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Text For Email</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Tracking_Number_1__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Tracking Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Tracking_Number_2__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Tracking Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Tracking_Number_3__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Tracking Number 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Value_Of_Proposal__c</fullName>
        <description>R5 - Created as part of 2461</description>
        <label>Value Of Quotation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Processing</label>
    <nameField>
        <displayFormat>PRC-{YY}-{0000}</displayFormat>
        <label>Processing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_Completion_Date_cannot_be_blank</fullName>
        <active>true</active>
        <description>Ensure the Results.Actual_Completion_Date is not blank</description>
        <errorConditionFormula>AND(ISBLANK( Rfp_Processing__r.Actual_Completion_Date__c ), ISPICKVAL( Rfp_Status__c , &apos;Issued&apos;) )</errorConditionFormula>
        <errorMessage>Actual Completion Date on the Results record related to this RFQ should not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Processing_Record_per_RFQ</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; Rfp_Processing__r.Total_Processings_Associated__c  = 1</errorConditionFormula>
        <errorMessage>There exists a Processing Record for this RFQ. Each RFQ record can have only one Processing record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Change_from_Drop_or_Delete</fullName>
        <active>true</active>
        <description>From &apos;Drop&apos; or &apos;Delete&apos; the Status can be change to &apos;In Progress&apos; only, not any other Active Status</description>
        <errorConditionFormula>AND(
ISCHANGED(Rfp_Status__c ) ,
OR( 
TEXT( PRIORVALUE(Rfp_Status__c ) ) = &quot;Drop&quot;,
TEXT( PRIORVALUE(Rfp_Status__c ) ) = &quot;Delete&quot;
),
 NOT(ISPICKVAL( Rfp_Status__c , &quot;In Progress&quot;) ) 
)</errorConditionFormula>
        <errorMessage>From &apos;Drop&apos; or &apos;Delete&apos; the Status can be change to &apos;In Progress&apos; only</errorMessage>
    </validationRules>
</CustomObject>